# diesel-sqlite

./: .gitignore  Cargo.toml  README.md  users.db
migrations/2020-06-07-205501_create_users/: down.sql  up.sql
src/: db.rs  main.rs  services.rs
src/db/: models.rs  schema.rs
src/db/models/: user_test.rs
src/services/: user.rs  user_test.rs
